# Skatliste

./: .gitignore  LICENSE  README.md  build.gradle
data/: chars.181.ubyte
src/main/: AndroidManifest.xml
src/main/assets/: nn.1.flt  test.480.ubyte  test.720.ubyte
src/main/cpp/: CMakeLists.txt  Classifier.cpp  Classifier.h  ListProc.cpp  ListProc.h  NdkCam.cpp  NdkCam.h  Program.cpp  Program.h  SkatListProc.cpp  SkatListProc.h  main.cpp  utils.h
src/main/cpp/ext/: CNFGAndroid.h  CNFGEGLDriver.c
src/main/res/drawable/: ic_launcher_foreground.xml
src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
src/main/res/values-night/: themes.xml
